do some changes in cities and about berlin

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -327,7 +327,7 @@
 
 
                         <div class="col-span-3">
-                            <p class="border border-gray-400 p-5  rounded-2xl shadow-lg shadow-indigo-500/40 ">Stand
+                            <p class="border border-gray-400 p-5 bg-white  rounded-2xl shadow-lg shadow-indigo-500/40 ">Stand
                                 Constructions is an <a href="https://www.standconstructions.com/"
                                     class="text-blue-500">exhibition stand
                                     builder </a>that primarily operates in Europe (Germany, UK, Netherlands, Spain,
@@ -347,6 +347,7 @@
                                 set-up, and dismantling as well. This 360° approach allows exhibitors to give up worry
                                 and focus on their marketing efforts.
                                 <br>
+                                <br>
                                 Our <a href="https://www.standconstructions.com/" class="text-blue-400">exhibition stand
                                     builder company in Europe</a> (Germany, UK, Netherlands, Spain, Italy)
                                 completes every project with the utmost dedication. Our entire team of project managers,
@@ -354,6 +355,7 @@
                                 completion of every phase. We have manufacturing units in major cities that are equipped
                                 with modern machinery and equipment. This allows us to swiftly complete the
                                 manufacturing process with minimal wastage.
+                                <br>
                                 <br>
 
                                 Stand Constructions, with more than 15 years of experience in the industry, has become
@@ -400,7 +402,7 @@
                                             <i class="fa-solid fa-bullseye"></i>
                                         </div>
                                         <h4 class="text-[#03a9f5] text-xl mb-5 font-medium">OUR MISSION</h4>
-                                        <p class="text-white">The Stand Constructions team is
+                                        <p class="text-white " >The Stand Constructions team is
                                             passionate
                                             about expanding its reach beyond Europe (Germany, UK, Netherlands, Spain,
                                             Italy) and
@@ -442,11 +444,10 @@
 
         <section class=" bg-blue-100" id="portfolio ">
             <div class="px-[5%] text-center">
-                <h3 class="md:text-4xl text-2xl font-bold md:mt-10 md:p-10 p-5 ">Some of Our Work That Excelled at the
+                <h3 class="md:text-4xl text-2xl font-bold  md:pt-10 ">Some of Our Work That Excelled at the
                     Exhibitions</h3>
 
-                <br />
-                <br />
+               
                 <div class="grid md:grid-cols-3 gap-2 md:m-10 md:p-10">
                     <div class="overflow-hidden  hover:bg-sky-700 boxes ">
                         <img src="../assets/images/portfolio/portfolio-1.webp" alt="portfolio-img-1" loading="lazy"
@@ -547,7 +548,7 @@
                 <div class="px-[3%] py-5">
 
                     <div class="text-center pt-5">
-                        <h2 class="md:text-4xl text-2xl text-white mt-4 md:pb-10">CHOOSE STAND CONSTRUCTIONS FOR AN
+                        <h2 class="md:text-4xl text-2xl text-black mt-4">CHOOSE STAND CONSTRUCTIONS FOR AN
                             UNPARALLELED EXPERIENCE
                         </h2>
                     </div>
@@ -577,11 +578,11 @@
         </section>
 
 
-        <section class="contact_us">
+        <section class="contact_us bg-white">
             <div class="px-[3%]">
                 <div>
                     <div class=" offset-md-1">
-                        <div class="text-center pt-5">
+                        <div class="text-center pt-10">
                             <span class="text-black text-xl">[ Connect with COMPANY ]</span>
 
                         </div>
