--- a/exhibition-stand-builder/spain/index.html
+++ b/exhibition-stand-builder/spain/index.html
@@ -397,7 +397,7 @@
                             <i class="fa fa-angle-right border text-4xl absolute  left-3/4 border-s-4"></i>
                             <img src="../../assets/images/exhibition_images/exhibition-2.jpg" alt="exhibit_image" class="border border-blue-400 md:w-3/4  p-5 rounded-2xl bg-white" loading="lazy">
                             <i class="fa fa-angle-right border text-4xl absolute  left-1/3 border-s-4"></i>
-                            <img src="../../assets/images/exhibition_images/exhibition-3.jpg" alt="exhibit_image" class="border border-500 p-3 rounded-2xl bg-white md:absolute top-3  left-8 bottom-3 md:w-60 w-full" loading="lazy">
+                            <!-- <img src="../../assets/images/exhibition_images/exhibition-3.jpg" alt="exhibit_image" class="border border-500 p-3 rounded-2xl bg-white md:absolute top-3  left-8 bottom-3 md:w-60 w-full" loading="lazy"> -->
 
 
                         </div>
@@ -413,7 +413,7 @@
             <div class="px-[5%] my-5">
                 <div class="md:grid grid-cols-6 gap-4">
                     <div class="col-start-2 col-span-4 ...">
-                        <h2 class="md:text-3xl text-2xl text-[#0076F9] font-medium  text-center">Some of Our Work That
+                        <h2 class="md:text-3xl text-2xl text-[#0076F9] font-medium  text-center md:mt-10">Some of Our Work That
                             Excelled at the Exhibitions</h2>
                         <p class="text-center pt-5 pb-10">Stand Constructions is an <b>exhibition stand builder</b> that
                             enables your brand to tell its story with graphic designs that reflect your brand’s unique
@@ -466,7 +466,7 @@
                 <div class="px-[3%]">
 
                     <div class="text-center pt-5">
-                        <h2 class="md:text-4xl text-2xl text-white mt-4 md:pb-10">COMPREHENSIVE EXHIBITION STANDS DESIGN COMPANY IN SPAIN, STAND CONSTRUCTION IS HERE!
+                        <h2 class="md:text-4xl text-2xl text-black mt-4 md:pb-10">COMPREHENSIVE EXHIBITION STANDS DESIGN COMPANY IN SPAIN, STAND CONSTRUCTION IS HERE!
                         </h2>
                     </div>
 
@@ -500,7 +500,7 @@
             </div>
         </section>
 
-        <section class="contact_us">
+        <section class="contact_us bg-white">
             <div class="px-[3%]">
                 <div>
                     <div class=" offset-md-1">
