--- a/stand-design-and-booth-construction-company/cologne/index.html
+++ b/stand-design-and-booth-construction-company/cologne/index.html
@@ -56,7 +56,7 @@
     <div class="flex justify-around">
         <input type="checkbox" name="check" id="check">
         <div class="flex items-center">
-            <img src="assets/images/logos/header-logo.webp" alt="Expo Exhibit Logo" class="h-12" loading="eager">
+            <img src="/assets/images/logos/header-logo.webp" alt="Expo Exhibit Logo" class="h-12" loading="eager">
         </div>
         <div class="nav-btn">
             <div class="nav-links">
@@ -418,10 +418,10 @@
         </section>
 
         <section>
-            <div class="ourwork bg-gradient-to-r from-cyan-500 to-blue-500">
+            <div class="ourwork  bg-white">
                 <div class="px-[3%]">
                     <div class="text-center md:p-10 pt-5">
-                        <h2 class="md:text-4xl text-2xl text-white mt-4 pb-10">WHY CHOOSE US AS YOUR EXHIBITION STAND
+                        <h2 class="md:text-4xl text-2xl text-black mt-4 ">WHY CHOOSE US AS YOUR EXHIBITION STAND
                             DESIGN COMPANY IN COLOGNE?
                         </h2>
                     </div>
@@ -449,7 +449,7 @@
                                 big success. Our team of exhibition stand builders in Germany is certified and skilled
                                 enough to carry out first-rate work and layout extraordinary stands.
                             </p>
-                            <h3 class="text-slate-50 md:text-3xl text-2xl my-10">HOW DO WE MAKE YOU STAND OUT AT AN
+                            <h3 class="tex-black md:text-3xl text-2xl my-10">HOW DO WE MAKE YOU STAND OUT AT AN
                                 EXHIBITION?</h3>
                             <p
                                 class="blurr_para md:p-10 p-5 mb-3 text-black bg-gradient-to-r from-cyan-200 to-blue-500 rounded-2xl">
@@ -650,7 +650,7 @@
 
 
 
-        <section class="contact_us">
+        <section class="contact_us bg-white">
             <div class="px-[3%]">
                 <div>
                     <div class=" offset-md-1">
