--- a/stand-design-and-booth-construction-company/frankfurt/index.html
+++ b/stand-design-and-booth-construction-company/frankfurt/index.html
@@ -396,10 +396,10 @@
         </section>
 
         <section>
-            <div class="ourwork bg-gradient-to-r from-cyan-500 to-blue-500">
+            <div class="ourwork bg-white">
                 <div class="px-[3%]">
                     <div class="text-center md:p-10 pt-5">
-                        <h2 class="md:text-4xl text-2xl text-white mt-4 pb-10">WHY CHOOSE US AS YOUR EXHIBITION STAND DESIGN COMPANY IN FRANKFURT? 
+                        <h2 class="md:text-4xl text-2xl text-black mt-4 pb-10">WHY CHOOSE US AS YOUR EXHIBITION STAND DESIGN COMPANY IN FRANKFURT? 
                         </h2>
                     </div>
 
@@ -413,7 +413,7 @@
 
                                 Further, our wide range of services eliminates the hassle associated with exhibitions. Our exhibition stand builders company in Frankfurt does not only design and build the stand, but also looks after its shipping and logistics, assembly and dismantling, and storage and maintenance. We offer these services, whether you choose us for a custom, rental, modular, or country pavilion stand. Our exhibition stand design company in Frankfurt also offers furniture rentals, on-site support, and assistance with marketing strategies. By opting for Stand Constructions, you are choosing a partner that will support you before, during, and after the exhibition. Stand Constructions is the right partner if you want the maximum ROI for your next exhibition. 
                             </p>
-                            <h3 class="text-slate-50 md:text-3xl text-2xl my-10">HOW DO WE MAKE YOU STAND OUT AT AN EXHIBITION? </h3>
+                            <h3 class="text-black md:text-3xl text-2xl my-10">HOW DO WE MAKE YOU STAND OUT AT AN EXHIBITION? </h3>
                             <p
                                 class="blurr_para md:p-10 p-5 mb-3 text-black bg-gradient-to-r from-cyan-200 to-blue-500 rounded-2xl">
                                 Stand Constructions understands the role of a well-designed exhibition stand. That’s why we put extra focus on designing unique stands. We will make you stand out among the crowd of exhibitors with the most captivating stand. Our <b>exhibition stand design company in Frankfurt </b>designs stands that are technologically advanced and integrate elements that increase visitor engagement. We design smart exhibition stands that use space well and are easy to navigate. They have different sections for product demos, client interaction, and refreshments, allowing you to perform these activities in dedicated areas. Join hands with our <b>exhibition stand contractor company in Frankfurt </b>and make a lasting impression at your next exhibition. 
@@ -617,7 +617,7 @@
         </section>
 
 
-        <section class="contact_us">
+        <section class="contact_us bg-white">
             <div class="px-[3%]">
                 <div>
                     <div class=" offset-md-1">
