--- a/stand-design-and-booth-construction-company/hamburg/index.html
+++ b/stand-design-and-booth-construction-company/hamburg/index.html
@@ -412,10 +412,10 @@
         </section>
 
         <section>
-            <div class="ourwork bg-gradient-to-r from-cyan-500 to-blue-500">
+            <div class="ourwork bg-white">
                 <div class="px-[3%]">
                     <div class="text-center md:p-10 pt-5">
-                        <h2 class="md:text-4xl text-2xl text-white mt-4 pb-10">WHY CHOOSE US AS YOUR EXHIBITION STAND
+                        <h2 class="md:text-4xl text-2xl text-black mt-4 ">WHY CHOOSE US AS YOUR EXHIBITION STAND
                             DESIGN COMPANY IN HAMBURG?
                         </h2>
                     </div>
@@ -446,7 +446,7 @@
                                 We take time to apprehend your necessities and work intently with you to ensure that
                                 your exhibition stand is the best and attracts a crowd for lead and income conversion.
                             </p>
-                            <h3 class="text-slate-50 md:text-3xl text-2xl my-10">HOW DO WE MAKE YOU STAND OUT AT AN EXHIBITION? </h3>
+                            <h3 class="text-black md:text-3xl text-2xl my-10">HOW DO WE MAKE YOU STAND OUT AT AN EXHIBITION? </h3>
                             <p
                                 class="blurr_para md:p-10 p-5 mb-3 text-black bg-gradient-to-r from-cyan-200 to-blue-500 rounded-2xl">
                                 To acquire a first-rate exhibition, stand layout that goals the proper audience, our team precisely analyses your stand requirements and works on them accordingly. We work with manufacturers and organizations of various sizes and industries. Stand Constructions provides customized <b>exhibition stand design and build in Hamburg </b>, and our customers can pick out from pop-up presentations to large, double-story stands to match each price range and style. Our team of skilled designers works intently with customers to create custom exhibition stands that mirror their brand identification and seize the eye of visitors. They use cutting-edge era and layout developments to produce stands that aren’t only visually appealing but also practical.
@@ -664,7 +664,7 @@
         </section>
 
 
-        <section class="contact_us">
+        <section class="contact_us bg-white">
             <div class="px-[3%]">
                 <div>
                     <div class=" offset-md-1">
