--- a/stand-design-and-booth-construction-company/hannover/index.html
+++ b/stand-design-and-booth-construction-company/hannover/index.html
@@ -400,10 +400,10 @@
         </section>
 
         <section>
-            <div class="ourwork bg-gradient-to-r from-cyan-500 to-blue-500">
+            <div class="ourworkbg-white">
                 <div class="px-[3%]">
                     <div class="text-center md:p-10 pt-5">
-                        <h2 class="md:text-4xl text-2xl text-white mt-4 pb-10">WHY CHOOSE US AS YOUR EXHIBITION STAND DESIGN COMPANY IN HANNOVER?
+                        <h2 class="md:text-4xl text-2xl text-black mt-4 ">WHY CHOOSE US AS YOUR EXHIBITION STAND DESIGN COMPANY IN HANNOVER?
                         </h2>
                     </div>
 
@@ -417,7 +417,7 @@
 
                                 A team of skilled & well-certified expert exhibition stand builders in Hannover is at Stand Constructions that can flip your brand imaginative and prescient right into a reality. In addition to designing extraordinary stands that supplement your brand, we’re the pre-eminent <b> exhibition stand design company in Hannover </b>. 
                             </p>
-                            <h3 class="text-slate-50 md:text-3xl text-2xl my-10">HOW DO WE MAKE YOU STAND OUT AT AN EXHIBITION? </h3>
+                            <h3 class="text-black md:text-3xl text-2xl my-10">HOW DO WE MAKE YOU STAND OUT AT AN EXHIBITION? </h3>
                             <p
                                 class="blurr_para md:p-10 p-5 mb-3 text-black bg-gradient-to-r from-cyan-200 to-blue-500 rounded-2xl">
                                 As an <b>exhibition stand contractor company in Hannover </b>, we can assist you in growing your brand presence. By placing our great foot forward, we provide a pristine variety of Hannover exhibition stands and building offerings. Our exhibition stand communicates the brand’s message effectively. We make our turnkey displaying offerings in conjunction with short answers to any exhibition-associated issues confronted by our customers. Regardless of the dimensions or sort of business, we work with each brand and business. Our <b>exhibition stand builder in Hannover </b>builds great exhibition stands concentrated on your target market with specific and profitable <b>exhibition stand designs and builds in Hannover </b>. As a leading <b>exhibition stand design company in Hannover</b>, we work tirelessly to create a stand to surpass all others.
@@ -622,7 +622,7 @@
 
 
 
-        <section class="contact_us">
+        <section class="contact_us bg-white">
             <div class="px-[3%]">
                 <div>
                     <div class=" offset-md-1">
