--- a/stand-design-and-booth-construction-company/munich/index.html
+++ b/stand-design-and-booth-construction-company/munich/index.html
@@ -397,10 +397,10 @@
         </section>
 
         <section>
-            <div class="ourwork bg-gradient-to-r from-cyan-500 to-blue-500">
+            <div class="ourwork bg-white">
                 <div class="px-[3%]">
                     <div class="text-center md:p-10 pt-5">
-                        <h2 class="md:text-4xl text-2xl text-white mt-4 pb-10">WHY CHOOSE US AS YOUR EXHIBITION STAND DESIGN COMPANY IN MUNICH? 
+                        <h2 class="md:text-4xl text-2xl text-black mt-4 ">WHY CHOOSE US AS YOUR EXHIBITION STAND DESIGN COMPANY IN MUNICH? 
                         </h2>
                     </div>
 
@@ -414,7 +414,7 @@
 
                                 Additionally, opting for us as your <b>exhibition stand contractor company in Munich </b>will provide you with a team that works with sheer dedication and loyalty. We have multiple teams, including project management, graphics, logistics, content, marketing, installation, and dismantling. They work in complete coordination to help you realise your exhibition goals. Also, we offer services beyond <b> exhibition stand design and build in Munich</b>. Our logistics team looks after the shipping and delivery of stands. Once the stand reaches the exhibition venue, our assembly team will set it up. Upon conclusion of the exhibition, the dismantling team will efficiently dismantle the stand.
                             </p>
-                            <h3 class="text-slate-50 md:text-3xl text-2xl my-10">HOW DO WE MAKE YOU STAND OUT AT AN EXHIBITION? </h3>
+                            <h3 class="text-black md:text-3xl text-2xl my-10">HOW DO WE MAKE YOU STAND OUT AT AN EXHIBITION? </h3>
                             <p
                                 class="blurr_para md:p-10 p-5 mb-3 text-black bg-gradient-to-r from-cyan-200 to-blue-500 rounded-2xl">
                                 Stand Constructions makes you stand out among the competitors with the strength of enchanting stands. Our <b>exhibition stand contractor company in Munich </b>integrates elements in exhibition stands that attract visitors. With powerful graphics and digital signage, we uplift your brand presence. Interactive elements in exhibition stands like touchscreens, AR, and VR provide visitors with a unique experience. With a separate section for product demos, you can engage visitors by instructing them about your products. Our <b>exhibition stand design company in Munich</b> understands the role an exhibition stand design plays in enriching your brand’s presence at any exhibition. Come, join hands hands with us for an unparalleled exhibiting experience. 
