--- a/stand-design-and-booth-construction-company/nuremberg/index.html
+++ b/stand-design-and-booth-construction-company/nuremberg/index.html
@@ -413,10 +413,10 @@
         </section>
 
         <section>
-            <div class="ourwork bg-gradient-to-r from-cyan-500 to-blue-500">
+            <div class="ourwork bg-white">
                 <div class="px-[3%]">
                     <div class="text-center md:p-10 pt-5">
-                        <h2 class="md:text-4xl text-2xl text-white mt-4 pb-10">WHY CHOOSE US AS YOUR EXHIBITION STAND DESIGN COMPANY IN NUREMBERG?
+                        <h2 class="md:text-4xl text-2xl text-black mt-4 ">WHY CHOOSE US AS YOUR EXHIBITION STAND DESIGN COMPANY IN NUREMBERG?
                         </h2>
                     </div>
 
@@ -434,7 +434,7 @@
                                 
                                 Stand Constructors understand that every exhibition is unique. That is why we work closely with you to create a stand that reflects your brand and grabs attention. Our team of experts handles everything, from initial design concepts to final installation, so you can focus on wowing your clients! Hiring Stand Constructors as your exhibition stand design concepts to final installation, so you can focus on wowing your clients! Hiring Stand Constructors as your <b>exhibition stand design company in Nuremberg </b> will be much more than you think in terms of ROI, audience retention, and sales.
                             </p>
-                            <h3 class="text-slate-50 md:text-3xl text-2xl my-10">HOW DO WE MAKE YOU STAND OUT AT AN EXHIBITION?</h3>
+                            <h3 class="text-black md:text-3xl text-2xl my-10">HOW DO WE MAKE YOU STAND OUT AT AN EXHIBITION?</h3>
                             <p
                                 class="blurr_para md:p-10 p-5 mb-3 text-black bg-gradient-to-r from-cyan-200 to-blue-500 rounded-2xl">
                                 Let’s face it, exhibitions can be crowded. How do you ensure attendees stop and take notice of your brand? With a stand that’s both eye-catching and functional. We as your partner <b>exhibition stand contractor company in Nuremberg</b> use creative design and top-notch materials to create a space that reflects your brand and compels visitors to engage.
@@ -641,7 +641,7 @@
         </section>
 
 
-        <section class="contact_us">
+        <section class="contact_us bg-white">
             <div class="px-[3%]">
                 <div>
                     <div class=" offset-md-1">
