--- a/stand-design-and-booth-construction-company/stuttgart/index.html
+++ b/stand-design-and-booth-construction-company/stuttgart/index.html
@@ -418,10 +418,10 @@
         </section>
 
         <section>
-            <div class="ourwork bg-gradient-to-r from-cyan-500 to-blue-500">
+            <div class="ourwork bg-white">
                 <div class="px-[3%]">
                     <div class="text-center md:p-10 pt-5">
-                        <h2 class="md:text-4xl text-2xl text-white mt-4 pb-10">WHY CHOOSE US AS YOUR EXHIBITION STAND
+                        <h2 class="md:text-4xl text-2xl text-black mt-4 ">WHY CHOOSE US AS YOUR EXHIBITION STAND
                             DESIGN COMPANY IN STUTTGART?
                         </h2>
                     </div>
@@ -456,7 +456,7 @@
                                 to end. We guarantee a seamless and stress-free experience for you by being there for
                                 you at every stage and responding to your queries.
                             </p>
-                            <h3 class="text-slate-50 md:text-3xl text-2xl my-10">HOW DO WE MAKE YOU STAND OUT AT AN
+                            <h3 class="text-black md:text-3xl text-2xl my-10">HOW DO WE MAKE YOU STAND OUT AT AN
                                 EXHIBITION?</h3>
                             <p
                                 class="blurr_para md:p-10 p-5 mb-3 text-black bg-gradient-to-r from-cyan-200 to-blue-500 rounded-2xl">
@@ -672,7 +672,7 @@
         </section>
 
 
-        <section class="contact_us">
+        <section class="contact_us bg-white">
             <div class="px-[3%]">
                 <div>
                     <div class=" offset-md-1">
