--- a/blogs/exhibition-stand-builder-in-berlin/index.html
+++ b/blogs/exhibition-stand-builder-in-berlin/index.html
@@ -60,7 +60,7 @@
     <div class="flex justify-around">
         <input type="checkbox" name="check" id="check">
         <div class="flex items-center">
-            <img src="assets/images/logos/header-logo.webp" alt="Expo Exhibit Logo" class="h-12" loading="eager">
+            <img src="/assets/images/logos/header-logo.webp" alt="Expo Exhibit Logo" class="h-12" loading="eager">
         </div>
         <div class="nav-btn">
             <div class="nav-links">
@@ -227,7 +227,7 @@
                         </div>
                     </div>
                     <div class=" m-5">
-                        <div class="flex flex-col gap-8 shadow-lg shadow-cyan-500/50 ">
+                        <div class="flex flex-col gap-8 ">
                             <p class="text-3xl font-bold text-center text-blue-300 ">Latest Posts</p>
                             <hr>
                             <div class="flex justify-center items-center">
