--- a/blogs/stand-design-company-germany/index.html
+++ b/blogs/stand-design-company-germany/index.html
@@ -449,7 +449,7 @@
                         </div>
                     </div>
                     <div class="">
-                        <div class="flex flex-col gap-8 shadow-lg shadow-cyan-500/50 m-5">
+                        <div class="flex flex-col gap-8 m-5">
                             <p class="text-3xl font-bold  text-center text-blue-300">Latest Posts</p>
                             <hr>
                             <div class="flex justify-center items-center">
