--- a/exhibition-stand-builder/netherlands/index.html
+++ b/exhibition-stand-builder/netherlands/index.html
@@ -256,11 +256,55 @@
                         </h1>
                         <p class="text-white md:stext-xl text-lg mb-8">Exhibition Stand Designer, Builder & Contractor in Netherlands
                         </p>
-                        <div class=" md:flex grid justify-center gap-4 md:pb-36">
-                            <a href="" class="bg-blue-500 p-3 text-white rounded-3xl hover:bg-white hover:text-blue-500">REQUEST FOR QUOTATION</a>
-                            <a href="" class="bg-blue-500 p-3 text-white rounded-3xl mb-6">
-                                REQUEST FOR FREE DESIGN</a>
-
+                        <div class="md:flex  block md:justify-center  text-center gap-4 md:pb-36 pb-5">
+                            <a href="#"
+                                class="relative inline-flex items-center justify-start py-3 pl-4 pr-12 overflow-hidden font-semibold text-[#0076F9] transition-all duration-150 ease-in-out rounded hover:pl-10 hover:pr-6 bg-gray-50 group mb-5">
+                                <span
+                                    class="absolute bottom-0 left-0 w-full h-1 transition-all duration-150 ease-in-out bg-[#0076F9] group-hover:h-full"></span>
+                                <span class="absolute right-0 pr-4 duration-200 ease-out group-hover:translate-x-12">
+                                    <svg class="w-5 h-5 text-[#02D7FF]" fill="none" stroke="currentColor"
+                                        viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                            d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
+                                    </svg>
+                                </span>
+                                <span
+                                    class="absolute left-0 pl-2.5 -translate-x-12 group-hover:translate-x-0 ease-out duration-200">
+                                    <svg class="w-5 h-5 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                            d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
+                                    </svg>
+                                </span>
+                                <span
+                                    class="relative w-full text-left transition-colors duration-200 ease-in-out group-hover:text-white">REQUEST
+                                    FOR QUOTATION</span>
+                            </a>
+    
+                            <a href="#"
+                                class="relative inline-flex items-center justify-start py-3 pl-4 pr-12 overflow-hidden font-semibold text-[#0076F9] transition-all duration-150 ease-in-out rounded hover:pl-10 hover:pr-6 bg-gray-50 group mb-5">
+                                <span
+                                    class="absolute bottom-0 left-0 w-full h-1 transition-all duration-150 ease-in-out bg-[#0076F9] group-hover:h-full"></span>
+                                <span class="absolute right-0 pr-4 duration-200 ease-out group-hover:translate-x-12">
+                                    <svg class="w-5 h-5 text-[#02D7FF]" fill="none" stroke="currentColor"
+                                        viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                            d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
+                                    </svg>
+                                </span>
+                                <span
+                                    class="absolute left-0 pl-2.5 -translate-x-12 group-hover:translate-x-0 ease-out duration-200">
+                                    <svg class="w-5 h-5 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                            d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
+                                    </svg>
+                                </span>
+                                <span
+                                    class="relative w-full text-left transition-colors duration-200 ease-in-out group-hover:text-white">REQUEST
+                                    FOR FREE DESIGN</span>
+                            </a>
+    
                         </div>
 
                     </div>
@@ -356,7 +400,7 @@
                             <i class="fa fa-angle-right border text-4xl absolute  left-3/4 border-s-4"></i>
                             <img src="../../assets/images/exhibition_images/exhibition-2.jpg" alt="exhibit_image" class="border border-blue-400 md:w-3/4  p-5 rounded-2xl bg-white" loading="lazy">
                             <i class="fa fa-angle-right border text-4xl absolute  left-1/3 border-s-4"></i>
-                            <img src="../../assets/images/exhibition_images/exhibition-3.jpg" alt="exhibit_image" class="border border-500 p-3 rounded-2xl bg-white md:absolute top-3  left-8 bottom-3 md:w-60 w-full" loading="lazy">
+                            <!-- <img src="../../assets/images/exhibition_images/exhibition-3.jpg" alt="exhibit_image" class="border border-500 p-3 rounded-2xl bg-white md:absolute md:top-3  left-8 bottom-3 md:w-60 w-full" loading="lazy"> -->
 
 
                         </div>
@@ -372,7 +416,7 @@
             <div class="px-[5%] my-5">
                 <div class="md:grid grid-cols-6 gap-4">
                     <div class="col-start-2 col-span-4 ...">
-                        <h2 class="md:text-3xl text-2xl text-[#0076F9] font-medium  text-center">Some of Our Work That
+                        <h2 class="md:text-3xl text-2xl text-[#0076F9] font-medium  text-center md:mt-10">Some of Our Work That
                             Excelled at the Exhibitions</h2>
                         <p class="text-center pt-5 pb-10">Stand Constructions is an <b>exhibition stand builder</b> that
                             enables your brand to tell its story with graphic designs that reflect your brand’s unique
@@ -424,7 +468,7 @@
                 <div class="px-[3%]">
 
                     <div class="text-center pt-5">
-                        <h2 class="md:text-4xl text-2xl text-white mt-4 md:pb-10">WHY SHOULD YOU MAKE US YOUR EXHIBITION STAND DESIGN COMPANY IN NETHERLANDS?
+                        <h2 class="md:text-4xl text-2xl text-black mt-4 md:pb-10">WHY SHOULD YOU MAKE US YOUR EXHIBITION STAND DESIGN COMPANY IN NETHERLANDS?
                         </h2>
                     </div>
 
@@ -457,7 +501,7 @@
                 </div>
             </div>
         </section>
-        <section class="contact_us">
+        <section class="contact_us bg-white">
             <div class="px-[3%]">
                 <div>
                     <div class=" offset-md-1">
