--- a/exhibition-stand-builder/uk/index.html
+++ b/exhibition-stand-builder/uk/index.html
@@ -392,7 +392,7 @@
                         </div>
                         <div class="image_box  relative">
                             <i class="fa fa-angle-right border text-4xl absolute  left-3/4 border-s-4"></i>
-                            <img src="../../assets/images/exhibition_images/exhibition-2.jpg" alt="exhibit_image" class="border border-blue-400 w-3/2 p-3 rounded-2xl bg-white" loading="lazy">
+                            <img src="../../assets/images/exhibition_images/exhibition-2.jpg" alt="exhibit_image" class="border border-blue-400 p-3 w-96 rounded-2xl bg-white" loading="lazy">
                            
                          
 
@@ -409,7 +409,7 @@
             <div class="px-[5%] my-5">
                 <div class="md:grid grid-cols-6 gap-4">
                     <div class="col-start-2 col-span-4 ...">
-                        <h2 class="md:text-3xl text-2xl text-[#0076F9] font-medium  text-center">Some of Our Work That
+                        <h2 class="md:text-3xl text-2xl text-[#0076F9] font-medium  text-center md:mt-10">Some of Our Work That
                             Excelled at the Exhibitions</h2>
                         <p class="text-center pt-5 pb-10">Stand Constructions is an <b>exhibition stand builder</b> that
                             enables your brand to tell its story with graphic designs that reflect your brand’s unique
@@ -462,7 +462,7 @@
                 <div class="px-[3%]">
 
                     <div class="text-center pt-5">
-                        <h2 class="md:text-4xl text-2xl text-white mt-4 md:pb-10">GET THE BEST SHOWCASING EXPERIENCE FROM A TOP EXHIBITION STAND DESIGN COMPANY IN UK
+                        <h2 class="md:text-4xl text-2xl text-black mt-4 md:pb-10">GET THE BEST SHOWCASING EXPERIENCE FROM A TOP EXHIBITION STAND DESIGN COMPANY IN UK
                         </h2>
                     </div>
 
@@ -500,7 +500,7 @@
             </div>
         </section>
 
-        <section class="contact_us">
+        <section class="contact_us bg-white">
             <div class="px-[3%]">
                 <div>
                     <div class=" offset-md-1">
