--- a/stand-design-and-booth-construction-company/berlin/index.html
+++ b/stand-design-and-booth-construction-company/berlin/index.html
@@ -44,117 +44,113 @@
 
 <body>
 
-    <!-- header -->
-    <header>
-        <div class="flex justify-around">
-            <input type="checkbox" name="check" id="check">
-            <div class="flex items-center">
-                <img src="/assets/images/logos/header-logo.webp" alt="Expo Exhibit Logo" class="h-12" loading="eager">
+     <!-- header -->
+<header>
+    <div class="flex justify-around">
+        <input type="checkbox" name="check" id="check">
+        <div class="flex items-center">
+            <img src="/assets/images/logos/header-logo.webp" alt="Expo Exhibit Logo" class="h-12" loading="eager">
+        </div>
+        <div class="nav-btn">
+            <div class="nav-links">
+                <ul>
+                    <li class="nav-link" style="--i: .6s">
+                        <a href="https://www.standconstructions.com/">Home</a>
+                    </li>
+                    <li class="nav-link" style="--i: .6s">
+                        <a href="https://www.standconstructions.com/about-us/">About us</a>
+                    </li>
+                    <li class="nav-link" style="--i: .85s">
+                        <a href="#">Exhibiting Countries
+                          
+                            <i class="fas fa-caret-down"></i></a>
+                        <div class="dropdown">
+                            <ul class="w-[15rem]">
+                                <li class="dropdown-link">
+                                    <a href="https://www.standconstructions.com/exhibition-stand-builder/germany/">Stand Builder In Germany</a>
+                                </li>
+                                <li class="dropdown-link">
+                                    <a href="https://www.standconstructions.com/exhibition-stand-builder/uk/">Stand Builder In UK</a>
+                                </li>
+                                <li class="dropdown-link">
+                                    <a href="https://www.standconstructions.com/exhibition-stand-builder/netherlands/">Stand Builder In Netherland</i></a>
+
+                                </li>
+                                <li class="dropdown-link">
+                                    <a href="https://www.standconstructions.com/exhibition-stand-builder/spain/">Stand Builder In Spain</a>
+                                </li>
+                                <li class="dropdown-link">
+                                    <a href="https://www.standconstructions.com/exhibition-stand-builder/italy/">Stand Builder In Italy</a>
+                                </li>
+                                <div class="arrow"></div>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="nav-link" style="--i: 1.1s">
+                        <a href="#">Cities<i class="fas fa-caret-down"></i></a>
+                        <div class="dropdown">
+                            <ul class="w-[15rem]">
+                                <li class="dropdown-link">
+                                    <a href="https://www.standconstructions.com/stand-design-and-booth-construction-company/berlin/">Stand Designer in
+                                        Berlin</a>
+                                </li>
+                                <li class="dropdown-link">
+                                    <a href="https://www.standconstructions.com/stand-design-and-booth-construction-company/cologne/">Stand Designer in Cologne</a>
+                                </li>
+                                <li class="dropdown-link">
+                                    <a href="https://www.standconstructions.com/stand-design-and-booth-construction-company/dortmund/">Stand Designer in Dortmund</a>
+
+                                </li>
+                                <li class="dropdown-link">
+                                    <a href="https://www.standconstructions.com/stand-design-and-booth-construction-company/dusseldorf/">Stand Designer in Dusseldorf</a>
+                                </li>
+                                <li class="dropdown-link">
+                                    <a href="https://www.standconstructions.com/stand-design-and-booth-construction-company/frankfurt/">Stand Designer in Frankfurt</a>
+                                </li>
+                                <li class="dropdown-link">
+                                    <a href="https://www.standconstructions.com/stand-design-and-booth-construction-company/hamburg/">Stand Designer in Hamburg</a>
+                                </li>
+                                <li class="dropdown-link">
+                                    <a href="https://www.standconstructions.com/stand-design-and-booth-construction-company/hannover/">Stand Designer in Hannover</a>
+                                </li>
+                                <li class="dropdown-link">
+                                    <a href="https://www.standconstructions.com/stand-design-and-booth-construction-company/munich/">Stand Designer in Munich</a>
+                                </li>
+                                <li class="dropdown-link">
+                                    <a href="https://www.standconstructions.com/stand-design-and-booth-construction-company/nuremberg/">Stand Designer in Nuremberg</a>
+                                </li>
+                                <li class="dropdown-link">
+                                    <a href="https://www.standconstructions.com/stand-design-and-booth-construction-company/stuttgart/">Stand Designer in Stuttgart</a>
+                                </li>
+                                <div class="arrow"></div>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="nav-link" style="--i: 1.35s">
+                        <a href="https://www.standconstructions.com/#process">Process</a>
+                    </li>
+                    <li class="nav-link" style="--i: 1.35s">
+                        <a href="https://www.standconstructions.com/#portfolio">Portfolio</a>
+                    </li>
+                    <li class="nav-link" style="--i: 1.35s">
+                        <a href="https://www.standconstructions.com/blogs/">Blogs</a>
+                    </li>
+                    <li class="nav-link" style="--i: 1.35s">
+                        <a href="https://www.standconstructions.com/#contact">Contact us</a>
+                    </li>
+                </ul>
             </div>
 
-            <div class="nav-btn">
-                <div class="nav-links">
-                    <ul>
-                        <li class="nav-link" style="--i: .6s">
-                            <a href="#">Home</a>
-                        </li>
-                        <li class="nav-link" style="--i: .6s">
-                            <a href="#">About us</a>
-                        </li>
-                        <li class="nav-link" style="--i: .85s">
-                            <a href="#">Exhibiting Countries
+        </div>
 
-                                <i class="fas fa-caret-down"></i></a>
-                            <div class="dropdown">
-                                <ul class="w-[15rem]">
-                                    <li class="dropdown-link">
-                                        <a href="#">Stand Builder In Germany</a>
-                                    </li>
-                                    <li class="dropdown-link">
-                                        <a href="#">Stand Builder In UK</a>
-                                    </li>
-                                    <li class="dropdown-link">
-                                        <a href="#">Stand Builder In Netherland</i></a>
-
-                                    </li>
-                                    <li class="dropdown-link">
-                                        <a href="#">Stand Builder In Spain</a>
-                                    </li>
-                                    <li class="dropdown-link">
-                                        <a href="#">Stand Builder In Italy</a>
-                                    </li>
-                                    <div class="arrow"></div>
-                                </ul>
-                            </div>
-                        </li>
-                        <li class="nav-link" style="--i: 1.1s">
-                            <a href="#">Cities<i class="fas fa-caret-down"></i></a>
-                            <div class="dropdown">
-                                <ul class="w-[15rem]">
-                                    <li class="dropdown-link">
-                                        <a href="#">Stand Designer in
-                                            Berlin</a>
-                                    </li>
-                                    <li class="dropdown-link">
-                                        <a href="#">Stand Designer in Cologne</a>
-                                    </li>
-                                    <li class="dropdown-link">
-                                        <a href="#">Stand Designer in Dortmund</a>
-
-                                    </li>
-                                    <li class="dropdown-link">
-                                        <a href="#">Stand Designer in Dusseldorf</a>
-                                    </li>
-                                    <li class="dropdown-link">
-                                        <a href="#">Stand Designer in Frankfurt</a>
-                                    </li>
-                                    <li class="dropdown-link">
-                                        <a href="#">Stand Designer in Hamburg</a>
-                                    </li>
-                                    <li class="dropdown-link">
-                                        <a href="#">Stand Designer in Hannover</a>
-                                    </li>
-                                    <li class="dropdown-link">
-                                        <a href="#">Stand Designer in Munich</a>
-                                    </li>
-                                    <li class="dropdown-link">
-                                        <a href="#">Stand Designer in Munich</a>
-                                    </li>
-                                    <li class="dropdown-link">
-                                        <a href="#">Stand Designer in Nuremberg</a>
-                                    </li>
-                                    <li class="dropdown-link">
-                                        <a href="#">Stand Designer in Stuttgart</a>
-                                    </li>
-                                    <div class="arrow"></div>
-                                </ul>
-                            </div>
-                        </li>
-                        <li class="nav-link" style="--i: 1.35s">
-                            <a href="#">Process</a>
-                        </li>
-                        <li class="nav-link" style="--i: 1.35s">
-                            <a href="#">Portfolio</a>
-                        </li>
-                        <li class="nav-link" style="--i: 1.35s">
-                            <a href="#">Blogs</a>
-                        </li>
-                        <li class="nav-link" style="--i: 1.35s">
-                            <a href="#">Contact us</a>
-                        </li>
-                    </ul>
-                </div>
-
-            </div>
-
-            <div class="hamburger-menu-container">
-                <div class="hamburger-menu">
-                    <div></div>
-                </div>
+        <div class="hamburger-menu-container">
+            <div class="hamburger-menu">
+                <div></div>
             </div>
         </div>
-    </header>
-    <!-- /header -->
+    </div>
+</header>
+<!-- /header -->
 
     <main>
 
@@ -444,10 +440,10 @@
             </div>
         </section>
         <section>
-            <div class="ourwork bg-gradient-to-r from-cyan-500 to-blue-500">
+            <div class="ourwork bg-white">
                 <div class="px-[3%]">
                     <div class="text-center md:p-10 pt-5">
-                        <h2 class="md:text-4xl text-2xl text-white mt-4 pb-10">WHY CHOOSE US AS YOUR EXHIBITION STAND
+                        <h2 class="md:text-4xl text-2xl text-black mt-4">WHY CHOOSE US AS YOUR EXHIBITION STAND
                             DESIGN COMPANY
                             IN BERLIN?
                         </h2>
@@ -486,7 +482,7 @@
                                 creating and delivering design solutions for our customers at the Berlin fair, as well
                                 as helping them promote their products at the fair.
                             </p>
-                            <h3 class="text-slate-50 md:text-3xl text-2xl my-10">HOW DO WE MAKE YOU STAND OUT AT AN
+                            <h3 class="text-black md:text-3xl text-2xl my-10">HOW DO WE MAKE YOU STAND OUT AT AN
                                 EXHIBITION?</h3>
                             <p
                                 class="blurr_para md:p-10 p-5 mb-3 text-black bg-gradient-to-r from-cyan-200 to-blue-500 rounded-2xl">
@@ -687,7 +683,7 @@
 
 
 
-        <section class="contact_us">
+        <section class="contact_us bg-white">
             <div class="px-[3%]">
                 <div>
                     <div class=" offset-md-1">
