--- a/stand-design-and-booth-construction-company/dortmund/index.html
+++ b/stand-design-and-booth-construction-company/dortmund/index.html
@@ -403,10 +403,10 @@
         </section>
 
         <section>
-            <div class="ourwork bg-gradient-to-r from-cyan-500 to-blue-500">
+            <div class="ourwork bg-white">
                 <div class="px-[3%]">
                     <div class="text-center md:p-10 pt-5">
-                        <h2 class="md:text-4xl text-2xl text-white mt-4 pb-10">WHY CHOOSE US AS YOUR EXHIBITION STAND
+                        <h2 class="md:text-4xl text-2xl text-black mt-4 pb-10">WHY CHOOSE US AS YOUR EXHIBITION STAND
                             DESIGN COMPANY IN COLOGNE?
                         </h2>
                     </div>
@@ -434,7 +434,7 @@
                                 big success. Our team of exhibition stand builders in Germany is certified and skilled
                                 enough to carry out first-rate work and layout extraordinary stands.
                             </p>
-                            <h3 class="text-slate-50 md:text-3xl text-2xl my-10">HOW DO WE MAKE YOU STAND OUT AT AN
+                            <h3 class="text-black md:text-3xl text-2xl my-10">HOW DO WE MAKE YOU STAND OUT AT AN
                                 EXHIBITION?</h3>
                             <p
                                 class="blurr_para md:p-10 p-5 mb-3 text-black bg-gradient-to-r from-cyan-200 to-blue-500 rounded-2xl">
@@ -635,7 +635,7 @@
 
 
 
-        <section class="contact_us">
+        <section class="contact_us bg-white">
             <div class="px-[3%]">
                 <div>
                     <div class=" offset-md-1">
