change css of 404

--- a/404/index.html
+++ b/404/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="https://www.standconstructions.com/assets/images/logos/fevicon-32x32.png" sizes="32x32" />
     <link rel="icon" href="https://www.standconstructions.com/assets/images/logos/fevicon-192x192.png" sizes="192x192" />
     <link rel="apple-touch-icon" href="/assets/images/logos/fevicon-192x192.png" />
-    <link rel="stylesheet" href="./404.css">
+    <link rel="stylesheet" href="https://www.standconstructions.com/404/404.css">
     <link rel="stylesheet" href="https://www.standconstructions.com/assets/css/style.css">
     <link rel="stylesheet" href="https://www.standconstructions.com/assets/css/tailwind.css">
 </head>
