--- a/stand-design-and-booth-construction-company/dusseldorf/index.html
+++ b/stand-design-and-booth-construction-company/dusseldorf/index.html
@@ -55,7 +55,9 @@
     <div class="flex justify-around">
         <input type="checkbox" name="check" id="check">
         <div class="flex items-center">
+            <a href="https://www.standconstructions.com">
             <img src="/assets/images/logos/header-logo.webp" alt="Expo Exhibit Logo" class="h-12" loading="eager">
+            </a>
         </div>
         <div class="nav-btn">
             <div class="nav-links">
