--- a/404/index.html
+++ b/404/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="https://www.standconstructions.com/404/404.css">
     <link rel="stylesheet" href="https://www.standconstructions.com/assets/css/style.css">
     <link rel="stylesheet" href="https://www.standconstructions.com/assets/css/tailwind.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
