change for conatct and process id

--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
         </section>
         <!-- /Italy section-->
         <section>
-            <div class="work-process py-10" >
+            <div class="work-process py-10" id="process">
                 <div class="px-[3%]">
                     <div class="text-center pt-5" >
                         <span class="text-white md:text-xl">[ Our Process ]</span>
@@ -793,7 +793,7 @@
 
                     </div>
 
-                    <div class="md:grid grid-cols-3 grid-flow-col gap-4 mb-20" id="process">
+                    <div class="md:grid grid-cols-3 grid-flow-col gap-4 mb-20" >
 
 
                         <div class="col-md-3 col-sm-6">
@@ -926,7 +926,7 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section id="contact">
 
             <div class=" relative w-full  p-3 bg-white  flex justify-center">
                 <span class="big-circle"></span>
@@ -974,7 +974,7 @@
                         </div>
                     </div>
 
-                    <div class="contact-form" id="contact">
+                    <div class="contact-form" >
                         <span class="circle one"></span>
                         <span class="circle two"></span>
 
