--- a/blogs/index.html
+++ b/blogs/index.html
@@ -43,7 +43,7 @@
         <input type="checkbox" name="check" id="check">
         <div class="flex items-center">
             <a href="https://www.standconstructions.com">
-            <img src="../assets/images/logos/header-logo.webp" alt="Expo Exhibit Logo" class="h-12" loading="eager">
+            <img src="/assets/images/logos/header-logo.webp" alt="Expo Exhibit Logo" class="h-12" loading="eager">
             </a>
         </div>
         <div class="nav-btn">
@@ -201,7 +201,7 @@
         <footer class="bg-[#000A93] px-[5%] text-white ">
             <div class="grid md:grid-cols-12 mt-5 py-10 gap-5">
                 <div class="col-span-3 flex flex-col gap-3">
-                    <img src="assets/images/logos/footer-logo.webp" class="w-40" alt="footer-logo" loading="lazy" />
+                    <img src="/assets/images/logos/footer-logo.webp" class="w-40" alt="footer-logo" loading="lazy" />
                     <div>
                         <p class="text-sm">
                             Stand Constructions is one of the most well-known exhibitions stand builders in Europe, with equipment and products from Germany, UK, Netherlands, Italy and Spain. At Stand Constructions, custom and unique stands are created by our talented graphic designers,
